--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "memory-game",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://cmlinac.github.io/MemoryGame",
   "dependencies": {
+    "gh-pages": "^2.1.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0"
@@ -10,6 +12,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
