--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "memory-game",
+  "name": "psych",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://cmlinac.github.io/MemoryGame",
