--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "psych",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://cmlinac.github.io/MemoryGame",
+  "homepage": "https://ichbindeveloper.github.io/MemoryGame",
   "dependencies": {
     "gh-pages": "^2.1.1",
     "react": "^16.11.0",
